style: add task-check-btn selector to disable pointer events - add overflow-x hidden to dropdown content fixing transition - add worb-break for user lists to prevent overflow - set minimum size for delete list icons

--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,6 @@ p, h1, h2, h3, h4, h5, h6 {
   --button-background-color: ;
 }
 
-/* Add min-width to icons (those in left-panel need this treatment) and break-word on user-list buttons (maybe with some changes to max-length in list title input) */
 /* Main CSS */
 body {
   font-family: "Roboto", sans-serif;
@@ -181,7 +180,7 @@ h1, h2, p, span {
   margin-left: 7px;
 }
 
-.main-list svg, .main-list span, .user-list svg, .user-list span, .close-task-btn svg {
+.main-list svg, .main-list span, .user-list svg, .user-list span, .close-task-btn svg, .task-check-btn svg {
   pointer-events: none;
 }
 
@@ -206,7 +205,7 @@ h1, h2, p, span {
 .dropdown-content {
   padding: 5px 0 0 1rem;
   max-height: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   transition: max-height 400ms ease;
 }
 
@@ -214,9 +213,18 @@ h1, h2, p, span {
   max-height: 500px;
 }
 
+.user-list{
+  word-break: break-all;
+}
+
 .delete-list {
   display: none;
   margin-left: auto;
+}
+
+.delete-list svg {
+  min-width: 24px;
+  min-height: 24px;
 }
 
 .user-list:hover .delete-list {
